<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2017 KoFuk
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
       http://www.apache.org/licenses/LICENSE-2.0
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chronoscoper.android.netchecker.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/execute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="20dp"
            android:text="@string/execute"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/url"
                android:inputType="textUri"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:drawableLeft="@drawable/ic_add"
            android:drawableStart="@drawable/ic_add"
            android:text="@string/add"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/request_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/dump_cookie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dump_cookie_state"/>

        <Button
            android:id="@+id/clear_cookie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_cookie"/>

        <Button
            android:id="@+id/clear_console"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_console"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/top_shadow"/>

        <TextView
            android:id="@+id/console"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:typeface="monospace"
            tools:text="Console"/>
    </LinearLayout>
</ScrollView>
